	- mklabel and mklbtype -inc: check lock on lbtype
	- mklabel -over
	- mklbtype: fixes for remote and existing types
	- mkbco: fix for multiple arguments
	- mklbtype: comments processed, and distributed to fixed or floating

0.12 Sun Aug 16 15:04:39 GMTDT 2009
     	- lsgen: print the parent version from which checked out
	- lsgen: -all option
	- lsgen: print parent merged in back (fix... was skipped)
	- co/mkbranch: use preemptcmt
	- preemptcmt: support multiline comments
	- forcelock: sudo based solution (contributed: Tatyana Shpichko)
	- uncheckout: interactive negociation of -rm/-keep options
	- hidden internal function: renaming according to convention

0.13 Sun Oct  4 14:28:00 GMTDT 2009
        - lock/unlock: preserve original error message in case of failure
	- unco: exit after running, do not fall back to default behaviour
	- mklabel: argument in remote vob; and -all option with -over
	- mklbtype: fix to Label type not found: "-rep"; error report
	- ci in user interactions preempting mode

0.14 Sat Nov 28 22:07:04 GMTST 2009
        - co: die if no element
	- rmbranch: handle the interactive case of missing -f flag
	- mklbtype -arc, and mkbrtype -arc

0.15 Sun Nov 29 11:59:47 GMTST 2009
     	- mkbrtype documentation, and comments to the archived type.
	- postponed 'early return' until after user interaction.

0.16 Tue Dec 15 10:32:40 GMTST 2009
        - mklabel: skip symlinks
	- mklbtype -fam: fix when remote vob non -rep and exists

0.17 Thu Jan 14 13:09:43 GMTST 2010
        - mklabel: fix to -over ---rep implicit only for family types
	- mklbtype: fix to -fam when explicit type prefix used
	- checkin: fixes to -diff (from genealogy) and -rec
	- mklbtype -inc now unlocks the label types, and re-locks the fixed

0.18 Sat Jan 16 17:15:31 GMTST 2010
        - co: detect unrecognize option errors
	- unco: bugfix to removing useless branch

0.19 Mon Jan 18 19:11:32 GMTST 2010
        - VobPathConv: fix to the conversion of Windows/cygwin paths