@@ -103,3 +103,5 @@ Revision history for Perl extension ClearCase::Wrapper::MGi.
 
 0.19 Mon Jan 18 19:11:32 GMTST 2010
         - VobPathConv: fix to the conversion of Windows/cygwin paths
+	- mkbranch: argument in other vob
+	- error handling: mklbtype and checkin
